Parser/test_cases/bad/semiinmethod.cl
class Hello {
   foo: Int;
   
   moo2(a:String, b:Int, c:Int, d:Int) : Hello {
      foo; 
      bar
